--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
-    "@react-native-firebase/app": "^18.3.2",
-    "@react-native-firebase/auth": "^18.3.2",
-    "@react-native-firebase/crashlytics": "^18.3.2",
-    "@react-native-firebase/firestore": "^18.3.2",
-    "@react-native-firebase/perf": "^18.3.2",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
+    "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -32,8 +28,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-build-properties": "~0.8.3"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
