--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.8",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -28,12 +29,13 @@
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "~3.3.0",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-secure-store": "~12.3.1"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
