--- a/app.json
+++ b/app.json
@@ -16,14 +16,14 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.emas.awsempay"
+      "bundleIdentifier": "com.emas.awsemgift"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.emas.awsempay"
+      "package": "com.emas.awsemgift"
     },
     "web": {
       "favicon": "./assets/favicon.png"
