--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-navigation/material-top-tabs": "^6.6.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@supabase/supabase-js": "^2.33.1",
@@ -26,6 +26,7 @@
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "~3.3.0",
