--- a/ios/awsem/Info.plist
+++ b/ios/awsem/Info.plist
@@ -80,5 +80,7 @@
     <string>Light</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSContactsUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your contacts</string>
   </dict>
 </plist>
