--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@supabase/supabase-js": "^2.33.1",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
+    "expo-constants": "~14.4.2",
+    "expo-contacts": "~12.2.0",
     "expo-dev-client": "~2.4.8",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-native": "0.72.4",
@@ -36,7 +38,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
