--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.1",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
@@ -29,6 +30,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.10.2",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "~3.3.0",
