--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
@@ -24,6 +25,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-native": "0.72.4",
