--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-linking": "~5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
