--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
     "expo-dev-client": "~2.4.8",
+    "expo-linking": "~5.0.2",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-native": "0.72.4",
@@ -41,8 +43,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "13.2.2",
-    "expo-linking": "~5.0.2"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
