--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -18,6 +19,7 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-contacts": "~12.2.0",
     "expo-dev-client": "~2.4.8",
