--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="awsemgift"/>
         <data android:scheme="com.emas.awsemgift"/>
-        <data android:scheme="exp+awsem"/>
+        <data android:scheme="exp+awsemgift"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
