--- a/ios/Awsemgift.xcodeproj/xcshareddata/xcschemes/Awsemgift.xcscheme
+++ b/ios/Awsemgift.xcodeproj/xcshareddata/xcschemes/Awsemgift.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "awsem.app"
-               BlueprintName = "awsem"
-               ReferencedContainer = "container:awsem.xcodeproj">
+               BuildableName = "Awsemgift.app"
+               BlueprintName = "Awsemgift"
+               ReferencedContainer = "container:Awsemgift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "awsemTests.xctest"
-               BlueprintName = "awsemTests"
-               ReferencedContainer = "container:awsem.xcodeproj">
+               BuildableName = "AwsemgiftTests.xctest"
+               BlueprintName = "AwsemgiftTests"
+               ReferencedContainer = "container:Awsemgift.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "awsem.app"
-            BlueprintName = "awsem"
-            ReferencedContainer = "container:awsem.xcodeproj">
+            BuildableName = "Awsemgift.app"
+            BlueprintName = "Awsemgift"
+            ReferencedContainer = "container:Awsemgift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "awsem.app"
-            BlueprintName = "awsem"
-            ReferencedContainer = "container:awsem.xcodeproj">
+            BuildableName = "Awsemgift.app"
+            BlueprintName = "Awsemgift"
+            ReferencedContainer = "container:Awsemgift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
