--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-hook-form": "^7.46.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.3",
-    "react-native-reanimated": "~3.3.0",
     "react-native-root-siblings": "^4.1.1",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
@@ -45,7 +44,9 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "react-native-reanimated": "~3.5.0",
+    "expo-system-ui": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
