--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,7 +37,7 @@ elsif podfile_properties.key?('ios.flipper') then
   end
 end
 
-target 'Awsemgift' do
+target 'AwsemGift' do
   use_expo_modules!
   config = use_native_modules!
 
