--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.1.6",
@@ -37,6 +38,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.3",
+    "react-native-reanimated": "~3.5.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-root-siblings": "^4.1.1",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
@@ -44,9 +47,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-webview": "13.2.2",
-    "react-native-reanimated": "~3.5.0",
-    "expo-system-ui": "~2.4.0"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
