--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "13.2.2",
-    "expo-image": "~1.3.5"
+    "expo-image": "~1.3.5",
+    "expo-network": "~5.4.0",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
